syntax = "proto3";

package account.v1;

import "google/api/annotations.proto";

option go_package = "server/api/account/v1;v1";
option java_multiple_files = true;
option java_package = "dev.server.api.account.v1";
option java_outer_classname = "AccountProtoV1";

// The greeting service definition.
service Account {
  // TransFrom transfer money from an account
  rpc TransFrom (AccountRequest) returns (AccountReply) {
    option (google.api.http) = {
      post: "/v1/transFrom"
      body: "*"
    };
  }
  // TransTo transfer money to an account
  rpc TransTo (AccountRequest) returns (AccountReply) {
    option (google.api.http) = {
      post: "/v1/transTo"
      body: "*"
    };
  }
}

message AccountRequest {
  string name = 1;
  int32 money = 2;
}

message AccountReply {
  string message = 1;
}
